--- a/index.html
+++ b/index.html
@@ -36,7 +36,6 @@
     <div class="text-5xl font-extrabold text-amber-600 tracking-wide">NISYS</div>
     <p class="text-slate-600 text-lg mt-2">Secure Cloud &amp; Digital Solutions</p>
     <div class="mt-4 w-24 h-1 bg-amber-500 mx-auto rounded-full"></div>
-    <!-- Disclaimer -->
     <p class="mt-3 text-xs text-slate-500 max-w-2xl mx-auto">
       * Disclaimer: Aceasta este o pagină demo cu scop informativ; nu reprezintă o ofertă comercială oficială.
     </p>
@@ -44,50 +43,62 @@
 </section>
 
   <!-- Hero -->
-<section class="container pt-4 pb-10 text-center">
-  <div class="grid gap-8 items-center justify-items-center">
-    <div class="max-w-3xl mx-auto">
-      <span class="inline-flex items-center gap-2 rounded-full border border-amber-200 bg-amber-50 text-amber-800 px-3 py-1 text-xs">
-        <!-- server icon -->
-        <svg class="h-4 w-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect x="2" y="2" width="20" height="8" rx="2"></rect><rect x="2" y="14" width="20" height="8" rx="2"></rect><path d="M6 6h.01M6 18h.01"/></svg>
-        NISYS Cloud – Stocare în România
-      </span>
-      <h1 class="mt-4 text-4xl md:text-5xl font-semibold leading-tight">
-        Prețuri simple. Securitate serioasă. <span class="text-slate-500">Suport local.</span>
-      </h1>
-      <p class="mt-4 text-slate-600 max-w-2xl mx-auto">
-        Alege pachetul potrivit pentru afacerea ta și adaugă opțiuni inteligente pentru securitate și eficiență. Totul rulat pe infrastructura NISYS din Mălureni, Argeș.
-      </p>
-      <div class="mt-6 flex flex-wrap items-center justify-center gap-4">
-        <a href="#plans" class="btn-primary inline-flex items-center">
-          Vezi pachetele
-          <svg class="ml-2 h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M9 18l6-6-6-6"/></svg>
-        </a>
-        <a href="#contact" class="text-sm underline underline-offset-4 text-slate-600 hover:text-slate-900">
-          Discută o ofertă personalizată
-        </a>
-      </div>
+<section class="container pt-4 pb-10">
+  <!-- Titluri + butoane centrate -->
+  <div class="max-w-3xl mx-auto text-center">
+    <span class="inline-flex items-center gap-2 rounded-full border border-amber-200 bg-amber-50 text-amber-800 px-3 py-1 text-xs">
+      <!-- server icon -->
+      <svg class="h-4 w-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+        <rect x="2" y="2" width="20" height="8" rx="2"></rect>
+        <rect x="2" y="14" width="20" height="8" rx="2"></rect>
+        <path d="M6 6h.01M6 18h.01"/>
+      </svg>
+      NISYS Cloud – Stocare în România
+    </span>
+
+    <h1 class="mt-4 text-4xl md:text-5xl font-semibold leading-tight">
+      Prețuri simple. Securitate serioasă. <span class="text-slate-500">Suport local.</span>
+    </h1>
+
+    <p class="mt-4 text-slate-600 max-w-2xl mx-auto">
+      Alege pachetul potrivit pentru afacerea ta și adaugă opțiuni inteligente pentru securitate și eficiență.
+      Totul rulat pe infrastructura NISYS din Mălureni, Argeș.
+    </p>
+
+    <div class="mt-6 flex flex-wrap items-center justify-center gap-4">
+      <a href="#plans" class="btn-primary inline-flex items-center">
+        Vezi pachetele
+        <svg class="ml-2 h-5 w-5" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+          <path d="M9 18l6-6-6-6"/>
+        </svg>
+      </a>
+      <a href="#contact" class="text-sm underline underline-offset-4 text-slate-600 hover:text-slate-900">
+        Discută o ofertă personalizată
+      </a>
     </div>
-      <div class="relative">
-        <div class="card p-6 mx-auto">
-          <div class="flex items-center justify-between">
-            <div class="text-sm text-slate-600">Facturare</div>
-            <div class="flex items-center gap-3 text-xs">
-              <span class="font-semibold">Lunar</span>
-              <span class="text-slate-500">/</span>
-              <span class="font-semibold">Anual <span class="ml-1 rounded bg-amber-100 px-2 py-0.5 text-amber-700">-15%</span></span>
-            </div>
-          </div>
-          <div class="mt-6 grid grid-cols-2 gap-4 text-sm text-slate-600">
-            <div class="flex items-center gap-2">🔒 Scanare antivirus opțional</div>
-            <div class="flex items-center gap-2">💾 Optimizare fișiere opțional</div>
-            <div class="flex items-center gap-2">🛡️ 2FA + criptare AES-256/TLS 1.3</div>
-            <div class="flex items-center gap-2">⚡ Bandă redundantă (Digi + Orange)</div>
-          </div>
+  </div>
+    <!-- Cardul de facturare sub, centrat -->
+  <div class="relative mt-10">
+    <div class="card p-6 mx-auto max-w-xl">
+      <div class="flex items-center justify-between">
+        <div class="text-sm text-slate-600">Facturare</div>
+        <div class="flex items-center gap-3 text-xs">
+          <span class="font-semibold">Lunar</span>
+          <span class="text-slate-500">/</span>
+          <span class="font-semibold">Anual
+            <span class="ml-1 rounded bg-amber-100 px-2 py-0.5 text-amber-700">-15%</span>
+          </span>
         </div>
       </div>
+      <div class="mt-6 grid grid-cols-2 gap-4 text-sm text-slate-600">
+        <div class="flex items-center gap-2">🔒 Scanare antivirus opțional</div>
+        <div class="flex items-center gap-2">💾 Optimizare fișiere opțional</div>
+        <div class="flex items-center gap-2">🛡️ 2FA + criptare AES-256/TLS 1.3</div>
+        <div class="flex items-center gap-2">⚡ Bandă redundantă (Digi + Orange)</div>
+      </div>
     </div>
-  </section>
+  </div>
+</section>
 
   <!-- Plans -->
   <section id="plans" class="container pb-8">
