--- a/index.html
+++ b/index.html
@@ -11,9 +11,10 @@
   <!-- Header / Logo -->
   <section class="flex flex-col items-center justify-center pt-16 pb-6">
     <div class="text-center">
-      <div class="text-5xl font-extrabold text-amber-600 tracking-wide">NISYS</div>
-      <p class="text-slate-600 text-lg mt-2">Secure Cloud &amp; Digital Solutions</p>
-      <div class="mt-4 w-24 h-1 bg-amber-500 mx-auto rounded-full"></div>
+      <img src="poza.png" alt="NISYS Logo" class="mx-auto w-56 md:w-64 mt-4">
+<p class="text-xs text-slate-500 mt-4 max-w-2xl mx-auto">
+  * Disclaimer: Aceasta este o pagină demo cu scop informativ; nu reprezintă o ofertă comercială oficială.
+</p>
       <p class="mt-3 text-xs text-slate-500 max-w-2xl mx-auto">
         * Disclaimer: Aceasta este o pagină demo cu scop informativ; nu reprezintă o ofertă comercială oficială.
       </p>
