--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 </head>
 <body class="min-h-screen bg-gray-50 text-slate-900">
   <!-- Header / Logo -->
+  <link rel="icon" type="image/png" href="favicon.png">
   <section class="flex flex-col items-center justify-center pt-16 pb-6">
     <div class="text-center">
       <img src="poza.png" alt="NISYS Logo" class="mx-auto w-56 md:w-64 mt-4">
