--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
   <link rel="icon" type="image/png" href="favicon.png">
   <section class="flex flex-col items-center justify-center pt-16 pb-6">
     <div class="text-center">
-      <img src="poza.png" alt="NISYS Logo" class="mx-auto w-56 md:w-64 mt-4">
+      <img src="logo-nisys.png" alt="NISYS Logo" class="mx-auto w-56 md:w-64 mt-4">
 <p class="text-xs text-slate-500 mt-4 max-w-2xl mx-auto">
-  * Disclaimer: Aceasta este o pagină demo cu scop informativ; nu reprezintă o ofertă comercială oficială.
-</p>
+      <p class="mt-3 text-xs text-slate-500 max-w-2xl mx-auto">
+        * Disclaimer: Aceasta este o pagină demo cu scop informativ; nu reprezintă o ofertă comercială oficială.
+      </p>
     </div>
   </section>
 
