--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       </span>
 
       <h1 class="mt-4 text-4xl md:text-5xl font-semibold leading-tight">
-        Prețuri simple. Securitate serioasă. <span class="text-slate-500">Suport local.</span>
+        Prețuri simple. Securitate avansată. <span class="text-slate-500">Suport local.</span>
       </h1>
 
       <p class="mt-4 text-slate-600 max-w-2xl mx-auto">
