--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <section class="flex flex-col items-center justify-center pt-8 pb-2">
     <div class="text-center">
       <!-- imagine logo -->
-      <img src="poza6.png" alt="NISYS Logo" class="mx-auto w-65 md:w-75 mt-1"/>
+      <img src="poza6.png" alt="NISYS Logo" class="mx-auto w-44 md:w-52 mt-1 p-2 bg-gradient-to-b from-amber-50 to-white rounded-full shadow-md"/>
       <div class="mt-2 w-44 h-1 bg-amber-500 mx-auto rounded-full"></div>
       <p class="mt-3 text-xs text-slate-500 max-w-2xl mx-auto">
         * Disclaimer: Aceasta este o pagină demo cu scop informativ; nu reprezintă o ofertă comercială oficială.
