--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
   <img
     src="poza6.png"
     alt="NISYS Logo"
-    class="block h-auto w-36 md:w-44 lg:w-48
-           filter drop-shadow-[0_8px_22px_rgba(0,0,0,0.25)]"
+    class="block h-auto w-36 md:w-44 lg:w-48 filter drop-shadow-[0_8px_22px_rgba(0,0,0,0.25)]"
   />
 </div>
       <div class="mt-2 w-44 h-1 bg-amber-500 mx-auto rounded-full"></div>
