--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   />
 </div>
       <div class="mt-2 w-44 h-1 bg-amber-500 mx-auto rounded-full"></div>
-      <p class="mt-3 text-xs text-slate-500 max-w-2xl mx-auto">
+      <p class="mt-3 text-xs text-slate-500 max-w-4xl mx-auto">
         * Disclaimer: Aceasta este o pagină demo cu scop informativ; nu reprezintă o ofertă comercială oficială.
       </p>
     </div>
@@ -34,7 +34,7 @@
       </span>
 
       <h1 class="mt-4 text-4xl md:text-5xl font-semibold leading-tight">
-        Prețuri simple. Securitate avansată. <span class="text-slate-500">Suport local.</span>
+        Prețuri competitive. Securitate avansată. <span class="text-slate-500">Suport local.</span>
       </h1>
 
       <p class="mt-4 text-slate-600 max-w-2xl mx-auto">
