--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>NISYS – Prețuri (Demo)</title>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="min-h-screen bg-gray-50 text-slate-900">
+<body class="min-h-screen bg-gray-950 text-gray-100">
   <!-- Header / Logo -->
   <section class="flex flex-col items-center justify-center pt-16 pb-6">
     <div class="text-center">
