--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <section class="flex flex-col items-center justify-center pt-16 pb-6">
     <div class="text-center">
       <!-- imagine logo (ai grijă să existe logo-nisys.png în repo) -->
-      <img src="logo-nisys.png?v=2" alt="NISYS Logo"
+      <img src="poza6.png?v=2" alt="NISYS Logo"
            class="mx-auto w-56 md:w-64 mt-2 block"
            style="filter: drop-shadow(0 10px 22px rgba(0,0,0,.25));" />
       <div class="mt-4 w-24 h-1 bg-amber-500 mx-auto rounded-full"></div>
