--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
   </div>
 
   <div class="max-w-2xl mx-auto mt-6 rounded-3xl border border-gray-200 bg-white shadow-sm p-6">
-    <form class="flex flex-col sm:flex-row gap-3" onsubmit="event.preventDefault(); alert('Demo: aici vei integra verificarea disponibilității domeniilor.');">
+    <form class="flex flex-col sm:flex-row gap-3" onsubmit="event.preventDefault(); alert('Demo: aceste este un demo.');">
       <input
         type="text"
         placeholder="ex: nume-firma.ro"
