--- a/index.html
+++ b/index.html
@@ -335,7 +335,7 @@
     </div>
 
     <div class="max-w-2xl mx-auto mt-6 rounded-3xl border border-neutral-200 bg-neutral-50 shadow-sm p-6">
-      <form class="flex flex-col sm:flex-row gap-3" onsubmit="event.preventDefault(); alert('Demo: aici vei integra verificarea disponibilității domeniilor.');">
+      <form class="flex flex-col sm:flex-row gap-3" onsubmit="event.preventDefault(); alert('Demo: acesta este daor de decor pentr demo.');">
         <input type="text" placeholder="ex: nume-firma.ro"
                class="flex-1 rounded-2xl border border-neutral-200 px-4 py-3 focus:outline-none focus:ring-2 focus:ring-amber-400"
                aria-label="Numele domeniului"/>
