--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>NISYS — Acasă</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="/img/poza6.png">
+  <link rel="icon" href="poza6.png">
   <style>
     .glass{ background: rgba(255,255,255,0.35); box-shadow: 0 10px 30px rgba(0,0,0,.06); border:1px solid rgba(255,255,255,.35); backdrop-filter: blur(14px); }
   </style>
@@ -95,7 +95,7 @@
           <li>• RAM dedicați, backup zilnic</li>
           <li>• Panou simplu, protecție DDoS până la 2.5 Gbps</li>
         </ul>
-        <div class="mt-5 h-32 rounded-xl bg-cover bg-center" style="background-image:url('/img/minecraft.jpg');"></div>
+        <div class="mt-5 h-32 rounded-xl bg-cover bg-center" style="background-image:url('minecraft.jpg');"></div>
       </div>
     </div>
 
