--- a/index.html
+++ b/index.html
@@ -54,6 +54,6 @@
         <li>• RAM dedicați, backup zilnic</li>
         <li>• Protecție DDoS până la 2.5 Gbps</li>
       </ul>
-      <div class="mt-5 h-28 rounded-xl bg-cover bg-center" style="background-image:url('/img/minecraft.jpg');"></div>
+      <div class="mt-5 h-28 rounded-xl bg-cover bg-center" style="background-image:url('minecraft.jpg');"></div>
     </a>
   </div>
