--- a/web.html
+++ b/web.html
@@ -1,1 +1,82 @@
+<!doctype html>
+<html lang="ro">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>NISYS — Web hosting</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <link rel="icon" href="/img/poza6.png">
+  <style>.glass{background:rgba(255,255,255,.35);border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(14px);box-shadow:0 10px 30px rgba(0,0,0,.06);}</style>
+</head>
+<body class="bg-gray-50 text-gray-900">
+  <header class="sticky top-0 z-40 glass">
+    <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
+      <a href="index.html" class="flex items-center gap-3">
+        <img src="/img/poza6.png" class="h-10 w-10 rounded-full" alt="">
+        <span class="font-semibold">NISYS</span>
+      </a>
+      <nav class="hidden md:flex items-center gap-6">
+        <a href="index.html" class="hover:text-amber-600">Acasă</a>
+        <a href="cloud.html" class="hover:text-amber-600">Cloud</a>
+        <a href="web.html" class="text-amber-700 font-semibold">Web</a>
+      </nav>
+      <button id="menuBtn" class="md:hidden p-2 rounded-lg border border-white/40">☰</button>
+    </div>
+    <div id="mobileMenu" class="md:hidden hidden border-t border-white/40">
+      <div class="max-w-6xl mx-auto px-4 py-2 flex flex-col gap-2">
+        <a href="index.html" class="py-2">Acasă</a>
+        <a href="cloud.html" class="py-2">Cloud</a>
+        <a href="web.html" class="py-2">Web</a>
+      </div>
+    </div>
+  </header>
 
+  <main class="max-w-6xl mx-auto px-4 pt-12 pb-16">
+    <h1 class="text-3xl md:text-4xl font-extrabold tracking-tight text-center">Web hosting</h1>
+    <p class="mt-3 text-gray-600 text-center max-w-2xl mx-auto">
+      Nginx + PHP + DB gestionate, SSL gratuit, protecție Cloudflare. DDoS gratuit până la 2.5 Gbps.
+    </p>
+
+    <div class="mt-10 grid grid-cols-1 md:grid-cols-3 gap-6">
+      <div class="group rounded-2xl border border-amber-300 bg-white p-6 hover:bg-amber-100 hover:shadow-md hover:-translate-y-1 transition">
+        <h3 class="text-xl font-semibold">Start</h3>
+        <p class="mt-1 text-amber-700 font-semibold group-hover:text-orange-600">1,99€ / lună</p>
+        <ul class="mt-3 text-sm text-gray-700 space-y-1">
+          <li>• 1 site, 5 GB</li><li>• SSL gratuit</li><li>• E-mail prin SMTP</li><li>• Backup zilnic</li>
+        </ul>
+        <button class="mt-5 w-full py-2 rounded-xl bg-amber-600 text-white hover:bg-amber-700">Alege Start</button>
+      </div>
+
+      <div class="group rounded-2xl border border-amber-300 bg-white p-6 hover:bg-amber-100 hover:shadow-md hover:-translate-y-1 transition">
+        <h3 class="text-xl font-semibold">Pro</h3>
+        <p class="mt-1 text-amber-700 font-semibold group-hover:text-orange-600">3,99€ / lună</p>
+        <ul class="mt-3 text-sm text-gray-700 space-y-1">
+          <li>• 3 site-uri, 15 GB</li><li>• DB incluse</li><li>• Cache + compresie</li><li>• Migrare inclusă</li>
+        </ul>
+        <button class="mt-5 w-full py-2 rounded-xl bg-amber-600 text-white hover:bg-amber-700">Alege Pro</button>
+      </div>
+
+      <div class="group rounded-2xl border border-amber-300 bg-white p-6 hover:bg-amber-100 hover:shadow-md hover:-translate-y-1 transition">
+        <h3 class="text-xl font-semibold">Business</h3>
+        <p class="mt-1 text-amber-700 font-semibold group-hover:text-orange-600">De la 6,99€ / lună</p>
+        <ul class="mt-3 text-sm text-gray-700 space-y-1">
+          <li>• Resurse dedicate</li><li>• Monitorizare & SLA</li><li>• CDN + WAF</li><li>• Suport prioritar</li>
+        </ul>
+        <button class="mt-5 w-full py-2 rounded-xl bg-amber-600 text-white hover:bg-amber-700">Contactează-ne</button>
+      </div>
+    </div>
+  </main>
+
+  <footer class="border-t border-gray-200">
+    <div class="max-w-6xl mx-auto px-4 py-8 text-center md:text-left">
+      © <span id="y"></span> NISYS SRL — Web hosting
+    </div>
+  </footer>
+
+  <script>
+    document.getElementById('y').textContent = new Date().getFullYear();
+    const btn=document.getElementById('menuBtn'),mm=document.getElementById('mobileMenu');
+    btn?.addEventListener('click',()=>mm.classList.toggle('hidden'));
+  </script>
+</body>
+</html>
