--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1" />
   <title>NISYS — Acasă</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="/img/poza6.png">
+  <link rel="icon" href="/poza6.png">
   <style>
     .glass { background: rgba(255,255,255,0.35); border:1px solid rgba(255,255,255,.35); backdrop-filter: blur(14px); box-shadow: 0 10px 30px rgba(0,0,0,.06); }
   </style>
@@ -15,7 +15,7 @@
   <header class="sticky top-0 z-40 glass">
     <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
       <a href="index.html" class="flex items-center gap-3">
-        <img src="/img/poza6.png" alt="NISYS" class="h-10 w-10 rounded-full">
+        <img src="poza6.png" alt="NISYS" class="h-10 w-10 rounded-full">
         <span class="font-semibold tracking-tight">NISYS</span>
       </a>
       <nav class="hidden md:flex items-center gap-6">
@@ -97,7 +97,7 @@
           <li>• RAM dedicați, backup zilnic</li>
           <li>• Protecție DDoS până la 2.5 Gbps</li>
         </ul>
-        <div class="mt-5 h-28 rounded-xl bg-cover bg-center" style="background-image:url('/img/minecraft.jpg');"></div>
+        <div class="mt-5 h-28 rounded-xl bg-cover bg-center" style="background-image:url('minecraft.png');"></div>
       </a>
     </div>
 
