--- a/web.html
+++ b/web.html
@@ -2,81 +2,133 @@
 <html lang="ro">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>NISYS — Web hosting</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>NISYS – Web Hosting (Demo)</title>
   <script src="https://cdn.tailwindcss.com"></script>
-  <link rel="icon" href="/img/poza6.png">
-  <style>.glass{background:rgba(255,255,255,.35);border:1px solid rgba(255,255,255,.35);backdrop-filter:blur(14px);box-shadow:0 10px 30px rgba(0,0,0,.06);}</style>
 </head>
-<body class="bg-gray-50 text-gray-900">
-  <header class="sticky top-0 z-40 glass">
-    <div class="max-w-6xl mx-auto px-4 py-3 flex items-center justify-between">
-      <a href="index.html" class="flex items-center gap-3">
-        <img src="/img/poza6.png" class="h-10 w-10 rounded-full" alt="">
-        <span class="font-semibold">NISYS</span>
-      </a>
-      <nav class="hidden md:flex items-center gap-6">
-        <a href="index.html" class="hover:text-amber-600">Acasă</a>
-        <a href="cloud.html" class="hover:text-amber-600">Cloud</a>
-        <a href="web.html" class="text-amber-700 font-semibold">Web</a>
-      </nav>
-      <button id="menuBtn" class="md:hidden p-2 rounded-lg border border-white/40">☰</button>
+<body class="min-h-screen bg-gray-50 text-slate-900">
+  <!-- Header / Logo -->
+  <section class="flex flex-col items-center justify-center pt-16 pb-6">
+    <div class="text-center">
+      <img src="img/poza6.png" alt="NISYS Logo"
+           class="mx-auto w-56 md:w-64 mt-2 block"
+           style="filter: drop-shadow(0 10px 22px rgba(0,0,0,.25));" />
+      <div class="mt-4 w-24 h-1 bg-amber-500 mx-auto rounded-full"></div>
+      <p class="mt-3 text-xs text-slate-500 max-w-2xl mx-auto">
+        * Aceasta este o pagină demo cu scop informativ; nu reprezintă o ofertă comercială oficială.
+      </p>
     </div>
-    <div id="mobileMenu" class="md:hidden hidden border-t border-white/40">
-      <div class="max-w-6xl mx-auto px-4 py-2 flex flex-col gap-2">
-        <a href="index.html" class="py-2">Acasă</a>
-        <a href="cloud.html" class="py-2">Cloud</a>
-        <a href="web.html" class="py-2">Web</a>
-      </div>
+  </section>
+
+  <!-- Hero scurt -->
+  <section class="max-w-7xl mx-auto px-4 pt-2 pb-6">
+    <div class="max-w-3xl mx-auto text-center">
+      <span class="inline-flex items-center gap-2 rounded-full border border-amber-200 bg-amber-50 text-amber-800 px-3 py-1 text-xs">
+        <svg class="h-4 w-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><circle cx="12" cy="12" r="10"/><path d="M8 12h8M12 8v8"/></svg>
+        NISYS Web Hosting – SSL inclus & backup
+      </span>
+      <h1 class="mt-4 text-4xl md:text-5xl font-semibold leading-tight">
+        Găzduire web rapidă. <span class="text-slate-500">Suport prietenos.</span>
+      </h1>
+      <p class="mt-4 text-slate-600 max-w-2xl mx-auto">
+        Planuri simple pentru site-uri personale, magazine online și proiecte de firmă.
+      </p>
     </div>
-  </header>
+  </section>
 
-  <main class="max-w-6xl mx-auto px-4 pt-12 pb-16">
-    <h1 class="text-3xl md:text-4xl font-extrabold tracking-tight text-center">Web hosting</h1>
-    <p class="mt-3 text-gray-600 text-center max-w-2xl mx-auto">
-      Nginx + PHP + DB gestionate, SSL gratuit, protecție Cloudflare. DDoS gratuit până la 2.5 Gbps.
-    </p>
+  <!-- Planuri Găzduire Web -->
+  <section id="web" class="max-w-7xl mx-auto px-4 pb-10">
+    <h2 class="text-2xl font-semibold text-center">Planuri Găzduire Web</h2>
+    <p class="mt-2 text-slate-600 max-w-2xl mx-auto text-center">SSL inclus, backup zilnic, panou de control prietenos.</p>
 
-    <div class="mt-10 grid grid-cols-1 md:grid-cols-3 gap-6">
-      <div class="group rounded-2xl border border-amber-300 bg-white p-6 hover:bg-amber-100 hover:shadow-md hover:-translate-y-1 transition">
-        <h3 class="text-xl font-semibold">Start</h3>
-        <p class="mt-1 text-amber-700 font-semibold group-hover:text-orange-600">1,99€ / lună</p>
-        <ul class="mt-3 text-sm text-gray-700 space-y-1">
-          <li>• 1 site, 5 GB</li><li>• SSL gratuit</li><li>• E-mail prin SMTP</li><li>• Backup zilnic</li>
+    <div class="mt-6 grid md:grid-cols-3 gap-6 items-stretch">
+      <!-- Web Basic -->
+      <div class="group rounded-3xl border border-gray-200 bg-white shadow-sm p-6 h-full flex flex-col
+                  transition transform hover:scale-[1.02] hover:shadow-xl hover:border-amber-300 hover:bg-amber-50">
+        <div class="flex items-center justify-between">
+          <h3 class="text-xl font-semibold group-hover:text-amber-900">Web Basic</h3>
+          <span class="text-xs rounded-full bg-amber-100 px-2 py-1 text-amber-800">Promo</span>
+        </div>
+        <div class="mt-4 text-4xl font-bold group-hover:text-amber-900">
+          €2<span class="text-base font-normal text-slate-500 group-hover:text-amber-900">/lună</span>
+          <span class="ml-2 text-lg text-slate-400 line-through">€3</span>
+        </div>
+        <p class="mt-3 text-slate-600 group-hover:text-amber-900">1 site, 1 GB spațiu, 1 DB, trafic 50 GB/lună.</p>
+        <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-inside flex-1">
+          <li>Panou de administrare</li>
+          <li>PHP 8.x + cache</li>
+          <li>Backup zilnic</li>
+          <li>E-mail 1 căsuță</li>
         </ul>
-        <button class="mt-5 w-full py-2 rounded-xl bg-amber-600 text-white hover:bg-amber-700">Alege Start</button>
+        <div class="mt-auto pt-6">
+          <a class="w-full inline-flex justify-center rounded-2xl bg-amber-600 hover:bg-amber-700 text-white px-5 py-3 font-medium" href="#contact">Comandă Web Basic</a>
+        </div>
       </div>
 
-      <div class="group rounded-2xl border border-amber-300 bg-white p-6 hover:bg-amber-100 hover:shadow-md hover:-translate-y-1 transition">
-        <h3 class="text-xl font-semibold">Pro</h3>
-        <p class="mt-1 text-amber-700 font-semibold group-hover:text-orange-600">3,99€ / lună</p>
-        <ul class="mt-3 text-sm text-gray-700 space-y-1">
-          <li>• 3 site-uri, 15 GB</li><li>• DB incluse</li><li>• Cache + compresie</li><li>• Migrare inclusă</li>
+      <!-- Web Pro -->
+      <div class="group rounded-3xl border border-gray-200 bg-white shadow-sm p-6 h-full flex flex-col ring-2 ring-amber-500/40
+                  transition transform hover:scale-[1.02] hover:shadow-xl hover:border-amber-300 hover:bg-amber-50">
+        <div class="flex items-center justify-between">
+          <h3 class="text-xl font-semibold group-hover:text-amber-900">Web Pro</h3>
+          <span class="text-xs rounded-full bg-amber-100 px-2 py-1 text-amber-800">Promo</span>
+        </div>
+        <div class="mt-4 text-4xl font-bold group-hover:text-amber-900">
+          €5<span class="text-base font-normal text-slate-500 group-hover:text-amber-900">/lună</span>
+          <span class="ml-2 text-lg text-slate-400 line-through">€7</span>
+        </div>
+        <p class="mt-3 text-slate-600 group-hover:text-amber-900">3 site-uri, 5 GB spațiu, 3 DB, trafic 200 GB/lună.</p>
+        <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-inside flex-1">
+          <li>Staging WordPress</li>
+          <li>Backups automate + restore</li>
+          <li>E-mail până la 5 căsuțe</li>
+          <li>Protecție WAF de bază</li>
         </ul>
-        <button class="mt-5 w-full py-2 rounded-xl bg-amber-600 text-white hover:bg-amber-700">Alege Pro</button>
+        <div class="mt-auto pt-6">
+          <a class="w-full inline-flex justify-center rounded-2xl bg-amber-600 hover:bg-amber-700 text-white px-5 py-3 font-medium" href="#contact">Comandă Web Pro</a>
+        </div>
       </div>
 
-      <div class="group rounded-2xl border border-amber-300 bg-white p-6 hover:bg-amber-100 hover:shadow-md hover:-translate-y-1 transition">
-        <h3 class="text-xl font-semibold">Business</h3>
-        <p class="mt-1 text-amber-700 font-semibold group-hover:text-orange-600">De la 6,99€ / lună</p>
-        <ul class="mt-3 text-sm text-gray-700 space-y-1">
-          <li>• Resurse dedicate</li><li>• Monitorizare & SLA</li><li>• CDN + WAF</li><li>• Suport prioritar</li>
+      <!-- Web Business -->
+      <div class="group rounded-3xl border border-gray-200 bg-white shadow-sm p-6 h-full flex flex-col
+                  transition transform hover:scale-[1.02] hover:shadow-xl hover:border-amber-300 hover:bg-amber-50">
+        <div class="flex items-center justify-between">
+          <h3 class="text-xl font-semibold group-hover:text-amber-900">Web Business</h3>
+          <span class="text-xs rounded-full bg-amber-100 px-2 py-1 text-amber-800">Promo</span>
+        </div>
+        <div class="mt-4 text-4xl font-bold group-hover:text-amber-900">
+          €9<span class="text-base font-normal text-slate-500 group-hover:text-amber-900">/lună</span>
+          <span class="ml-2 text-lg text-slate-400 line-through">€12</span>
+        </div>
+        <p class="mt-3 text-slate-600 group-hover:text-amber-900">Site-uri nelimitate*, 10 GB spațiu, trafic 500 GB/lună.</p>
+        <ul class="mt-4 space-y-2 text-sm text-slate-600 list-disc list-inside flex-1">
+          <li>WAF + rate-limit</li>
+          <li>Monitorizare uptime</li>
+          <li>E-mail până la 10 căsuțe</li>
+          <li>Asistență în ore de program</li>
         </ul>
-        <button class="mt-5 w-full py-2 rounded-xl bg-amber-600 text-white hover:bg-amber-700">Contactează-ne</button>
+        <div class="mt-auto pt-6">
+          <a class="w-full inline-flex justify-center rounded-2xl bg-amber-600 hover:bg-amber-700 text-white px-5 py-3 font-medium" href="#contact">Comandă Web Business</a>
+        </div>
       </div>
     </div>
-  </main>
+    <p class="mt-3 text-xs text-slate-500 text-center">* în limite rezonabile de resurse (CPU/RAM/procese) pentru planul ales.</p>
+  </section>
 
-  <footer class="border-t border-gray-200">
-    <div class="max-w-6xl mx-auto px-4 py-8 text-center md:text-left">
-      © <span id="y"></span> NISYS SRL — Web hosting
+  <!-- CTA -->
+  <section id="contact" class="max-w-7xl mx-auto px-4 pb-16">
+    <div class="rounded-3xl border border-gray-200 bg-white shadow-sm p-8 md:p-10 flex flex-col md:flex-row items-center justify-between gap-6">
+      <div>
+        <h3 class="text-2xl font-semibold">Hai să-ți găzduim site-ul.</h3>
+        <p class="text-slate-600 mt-2">Alege planul potrivit sau scrie-ne și te ajutăm cu migrarea.</p>
+      </div>
+      <div class="flex items-center gap-3">
+        <a class="rounded-2xl bg-amber-600 hover:bg-amber-700 text-white px-5 py-3 font-medium" href="#">Creează cont</a>
+        <a class="rounded-2xl border border-amber-200 bg-amber-50 text-amber-800 hover:bg-amber-100 px-5 py-3 font-medium inline-flex items-center gap-2" href="mailto:contact@nisys.ro">
+          <svg class="h-4 w-4" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><path d="M4 4h16v16H4z"/><path d="M22 6l-10 7L2 6"/></svg>
+          Contactează-ne
+        </a>
+      </div>
     </div>
-  </footer>
-
-  <script>
-    document.getElementById('y').textContent = new Date().getFullYear();
-    const btn=document.getElementById('menuBtn'),mm=document.getElementById('mobileMenu');
-    btn?.addEventListener('click',()=>mm.classList.toggle('hidden'));
-  </script>
+  </section>
 </body>
 </html>
